kubernetes/environments/qa/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-app
  namespace: qa

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-app

  template:
    metadata:
      labels:
        app: devops-app

    spec:
      containers:
        - name: devops-app
          image: shivamyd/devops-app:1.0.0
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5000

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000

            initialDelaySeconds: 15
            periodSeconds: 20
