kubernetes/environments/qa/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-app
  namespace: qa

spec:
  type: NodePort

  selector:
    app: devops-app

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30500
